syntax = "proto3";

package com.road.yishi.proto.team;

message TeamInfoMsg {
  int32 teamId = 1;
  repeated int32 memberId = 2;
  int32 captainId = 3;
  repeated int32 memberDetail = 4;
}
